Fix issue with alt section overflowing indefinetely

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-	display: flex;
+    display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 75%;
@@ -18,7 +18,7 @@ main {
 
 /* TABLE */
 .table {
-	height: 520px;
+    height: 520px;
 	width: min(1100px, 90%);
 	margin: var(--day-head) 10px 32px var(--time-col);
 	position: relative;
@@ -38,6 +38,12 @@ main {
 	margin: 16px auto 0;
 	display: flex;
 	gap: 2rem;
+    max-height: 90vh;
+}
+
+.alt > *:open {
+    max-height: 100%;
+    overflow-y: scroll;
 }
 
 .toggles,
